<resources>
    <string name="add_book">Add book</string>
    <string name="remove_book">Remove book</string>
    <string name="add_new_book">Add new book</string>
    <string name="book_description">Book description</string>
    <string name="book_title">Book title</string>
    <string name="book_author">Book author</string>
    <string name="number_of_pages">Number of pages</string>
    <string name="add_book_image">Add book image</string>
    <string name="reviews">Reviews</string>
    <string name="write_review">Write review</string>
    <string name="available_books">Available books:</string>
    <string name="reserved_books">Reserved books:</string>
    <string name="reserve_book">Reserve book</string>
    <string name="number_of_books">Number of books</string>
    <string name="review_content">Review content</string>
    <string name="write_your_review_in_here">Write your review in here</string>
    <string name="discard_review">Discard review</string>
    <string name="add_review">Add review</string>
    <string name="books_score">Books score</string>
    <string name="created_by">created by:</string>
    <string name="last_post_by">last post by:</string>
    <string name="topic">Topic:</string>
    <string name="content">Content:</string>
    <string name="write_post_content_here">write post content here...</string>
    <string name="write_post_topic_here">write post topic here...</string>
    <string name="add_topic">Add topic</string>
    <string name="discard_topic">Discard topic</string>
    <string name="discard">Discard</string>
    <string name="reply">Reply</string>
    <string name="new_topic">New Topic</string>
    <string name="buy_book">Buy Book</string>
    <string name="message_seller">Message seller</string>
    <string name="book_sale">Book Sale</string>
    <string name="timeframe1">9:30-11:30</string>
    <string name="timeframe2">11:30-13:30</string>
    <string name="timeframe3">13:30-14:30</string>
    <string name="timeframe4">14:30-16:30</string>
    <string name="timeframe5">17:30-19:30</string>
    <string name="timeframe6">19:30-21:30</string>
    <string name="enter_book_category">Enter book category...</string>
    <string name="cancel_reservation">Cancel Reservation</string>
    <string name="background_of_image_card">Background of image card</string>
    <string name="image_of_a_book">Image of a book</string>
    <string name="app_name">Mechachrome mobile app</string>
    <string name="roehampton_university_student_portal">Roehampton University Student Portal</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login_page">Login Page</string>
    <string name="first_name">First Name:</string>
    <string name="email_address">Email Address:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="confirm_password2">Confirm password:</string>
    <string name="student_id">Student ID:</string>
    <string name="surname">Surname:</string>
    <string name="register">REGISTER</string>
    <string name="already_registered_login_here">Already Registered? Login Here</string>
    <string name="dont_have_account_register_here">New here? Register your account.</string>
    <string name="login">Login</string>
    <string name="timetables">Timetables</string>
    <string name="library">Library</string>
    <string name="moodle">Moodle</string>
    <string name="more">Forum</string>
    <string name="floor_plan">Floor plan</string>
    <string name="logout">Logout</string>
    <string name="registration_success">User registered!</string>
    <string name="empty">The forum is empty</string>
    <string name="account_settings">Account Settings</string>
    <string name="enter_new_name">Enter new name…</string>
    <string name="enter_new_last_name">Enter new last name…</string>
    <string name="enter_new_email">Enter new email…</string>
    <string name="confirm_changes">Confirm changes</string>
    <string name="select_attribute_to_change">Select attribute to change</string>
    <string name="my_books_reservations">My books reservations</string>
    <string name="my_forum_posts">my forum topics</string>
    <string name="my_books_for_sale">my books for sale</string>
    <string name="user_image">User image</string>
    <string name="last_name">Last name</string>
    <string name="first_name_">First name</string>
    <string name="email_address_">Email address</string>
    <string name="change_password">Change password</string>
    <string name="enter_new_password">Enter new password…</string>
    <string name="confirm_new_password">Confirm new password…</string>
    <string name="settings_image">Settings image</string>
    <string name="my_reviews">My reviews</string>
    <string name="your_password_here">Your password here…</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">CONFIRM</string>
    <string name="confirm_password_dialog">ConfirmPasswordDialog</string>
    <string name="book_price">Book Price</string>
    <string name="todo">TODO</string>
    <string name="forgot_your_password_click_here">Forgot your password?</string>
    <string name="back"><![CDATA[<< Back]]></string>
    <string name="forgot_password">Forgot password?</string>
    <string name="we_just_need_your_registered_email_to_sent_you_password_reset_instructions">We just need your registered Email to sent you password reset instructions</string>
    <string name="reset_password">reset password</string>
    <string name="_20">20</string>
    <string name="sample_to">Sample to</string>
    <string name="test_author">test author</string>
    <string name="_12_02_2020_00_03">12/02/2020 00:03</string>
    <string name="test_poster">test_poster</string>
    <string name="_12_02_2020_00_13">12/02/2020 00:13</string>
    <string name="mode">Mode:</string>
    <string name="change_picture_to_default">change picture to default</string>
    <string name="click_here_to_change_profile_picture">Click here to change profile picture</string>
    <string name="last_name1">Last Name:</string>
    <string name="e_mail">E-mail:</string>
    <string name="course">Course:</string>
    <string name="testtitle">TestTitle</string>
    <string name="score">score</string>
    <string name="_200_pages_100_reviews">200 Pages | 100 Reviews</string>
    <string name="_25">25</string>
    <string name="_26_02_2020">26/02/2020</string>
    <string name="from_date">From date:</string>
    <string name="to_date">To date:</string>
    <string name="_12_02_2020">12/02/2020</string>
    <string name="book_image">Book image</string>
    <string name="book_page_background">Book page background</string>
    <string name="add_a_new_book_for_sale">Add a new book for sale</string>
    <string name="choose_file">choose file</string>
    <string name="take_photo">take photo</string>
    <string name="change_floor">Change floor</string>
    <string name="floor_plan_image">Floor Plan Image</string>
    <string name="book_sold">BOOK SOLD</string>
    <string name="_200_pages">200 Pages</string>
    <string name="condition_used_good">Condition: Used - good</string>
    <string name="price_50">Price: £ 50</string>
    <string name="book_for_sale_background">Book for sale background</string>
    <string name="book_for_sale_image">Book for sale image</string>
    <string name="name">name</string>
    <string name="timeframe1_def">timeframe1</string>
    <string name="timeframe3_def">timeframe3</string>
    <string name="timeframe4_def">timeframe4</string>
    <string name="timeframe5_def">timeframe5</string>
    <string name="timeframe6_def">timeframe6</string>
    <string name="timeframe2_def">timeframe2</string>
</resources>
