<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Library.ReserveBook">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="0dp"
        android:layout_height="135dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/container_bg"
        android:contentDescription="@string/book_page_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />

    <ImageView

        android:id="@+id/item_book_img"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background3"
        android:contentDescription="@string/book_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/imageView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84000003" />

    <TextView
        android:id="@+id/item_book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/testtitle"
        android:textColor="@color/black_text_color"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/item_book_img"
        app:layout_constraintTop_toTopOf="@+id/imageView1" />

    <TextView
        android:id="@+id/item_book_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/test_author"
        android:textColor="@color/black_text_color"
        app:layout_constraintStart_toEndOf="@+id/item_book_img"
        app:layout_constraintTop_toBottomOf="@+id/item_book_title" />

    <RatingBar
        android:id="@+id/item_book_ratingBar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:numStars="5"
        android:progressTint="#C6FFC500"
        android:stepSize="0.5"
        app:layout_constraintStart_toEndOf="@+id/item_book_img"
        app:layout_constraintTop_toBottomOf="@+id/item_book_author" />

    <TextView

        android:id="@+id/item_book_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/score"
        android:textColor="@color/black_text_color"
        app:layout_constraintBottom_toBottomOf="@+id/item_book_ratingBar"
        app:layout_constraintStart_toEndOf="@+id/item_book_ratingBar"
        app:layout_constraintTop_toTopOf="@+id/item_book_ratingBar" />

    <TextView
        android:id="@+id/item_book_pagesrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/_200_pages_100_reviews"
        android:textColor="@color/black_text_color"
        app:layout_constraintStart_toEndOf="@+id/item_book_img"
        app:layout_constraintTop_toBottomOf="@+id/item_book_ratingBar" />


    <TextView
        android:id="@+id/availableTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:text="@string/available_books"
        android:textColor="@color/black_text_color"
        app:layout_constraintEnd_toStartOf="@+id/numAvailable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView1" />

    <TextView
        android:id="@+id/numAvailable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/_25"
        android:textAlignment="viewStart"
        android:textColor="@color/black_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/availableTextView"
        app:layout_constraintTop_toBottomOf="@+id/imageView1" />

    <TextView
        android:id="@+id/from_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/from_date"
        android:textAlignment="center"
        android:textColor="@color/black_text_color"
        app:layout_constraintEnd_toStartOf="@+id/to_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/availableTextView" />

    <TextView
        android:id="@+id/reserve_from"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/_12_02_2020"
        android:textAlignment="center"
        android:textColor="@color/black_text_color"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/reserve_book_btn"
        app:layout_constraintEnd_toStartOf="@+id/reserve_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from_text" />

    <TextView
        android:id="@+id/to_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/to_date"
        android:textAlignment="center"
        android:textColor="@color/black_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/from_text"
        app:layout_constraintTop_toBottomOf="@+id/numAvailable" />

    <TextView
        android:id="@+id/reserve_to"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:text="@string/_26_02_2020"
        android:textAlignment="center"
        android:textColor="@color/black_text_color"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reserve_from"
        app:layout_constraintTop_toBottomOf="@+id/to_text" />

    <Button
        android:id="@+id/reserve_book_btn"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:text="@string/reserve_book"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/discard_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reserve_from" />

    <Button
        android:id="@+id/discard_btn"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:text="@string/discard"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reserve_book_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>

