<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="175dp">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/container_bg"
        android:contentDescription="@string/book_for_sale_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView

        android:id="@+id/item_book_img"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background3"
        android:contentDescription="@string/book_for_sale_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/imageView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/item_book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_slab"
        android:singleLine="true"
        android:text="@string/testtitle"
        android:textColor="@color/black_text_color"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/item_book_img"
        app:layout_constraintTop_toTopOf="@+id/imageView1" />

    <TextView
        android:id="@+id/item_book_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_slab"
        android:singleLine="true"
        android:text="@string/test_author"
        android:textColor="@color/black_text_color"
        app:layout_constraintStart_toEndOf="@+id/item_book_img"
        app:layout_constraintTop_toBottomOf="@+id/item_book_title" />

    <TextView
        android:id="@+id/item_book_pages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/_200_pages"
        android:textColor="@color/black_text_color"
        app:layout_constraintStart_toEndOf="@+id/item_book_img"
        app:layout_constraintTop_toBottomOf="@+id/item_book_condition" />

    <TextView
        android:id="@+id/item_book_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/condition_used_good"
        android:textColor="@color/black_text_color"
        app:layout_constraintStart_toEndOf="@+id/item_book_img"
        app:layout_constraintTop_toBottomOf="@+id/item_book_author" />

    <TextView
        android:id="@+id/item_book_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/price_50"
        android:textColor="@color/black_text_color"
        app:layout_constraintStart_toEndOf="@+id/item_book_img"
        app:layout_constraintTop_toBottomOf="@+id/item_book_pages" />

    <TextView
        android:id="@+id/book_sold_text"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/light_black"
        android:gravity="center"
        android:text="@string/book_sold"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView1"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>